create github pages

--- a/management.html
+++ b/management.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="header9 cid-rcpCrNXgWR mbr-parallax-background" id="header9-n">
+<section class="engine"><a href="https://mobirise.info/i">web creation software</a></section><section class="header9 cid-rcpCrNXgWR mbr-parallax-background" id="header9-n">
 
     
 
@@ -102,7 +102,7 @@
     <div class="form-container">
         <div class="media-container-column" data-form-type="formoid">
             <div data-form-alert="" hidden="" class="align-center">Thanks for filling out the form!</div>
-            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Zat6b3b3lSxzLEcNRgPcZtVYsSs8WDGAWClvQo26WsPisRDDwBxkKh5Vn979066GlL4uLtblDU1+AVqOHF1Td7uwSf9a8LDZBIfzhpgAPbf/C/WDtMaIIB2sihudP9WA">
+            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="e8kkgmvwvZMmg+INalsjc9YSBrNCs5SHzqIQ1+aoowzcvk/ZRl1YO+Yb6wDPXxERawErDHUk8/oy1n4Sw3Oy1zu0W4Z8zRbWDp3vZyO1hxd1aofSVWaN36l+0jYv/iGm">
                 <div data-for="name">
                     <div class="form-group">
                         <input type="text" class="form-control px-3" name="name" data-form-field="Name" placeholder="Name" required="" id="name-header15-o">
