--- a/CertTraining.html
+++ b/CertTraining.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="header1 cid-rcHKRMpkt0 mbr-parallax-background" id="header1-u">
+<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="header1 cid-rcHKRMpkt0 mbr-parallax-background" id="header1-u">
 
     
 
